# voxl-tflite-server

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  README.md  build.sh  build_aarch64.sh  clean.sh  image_viewer_rgb.py  install_build_deps.sh  install_on_voxl.sh  libmodal_pipe_1.6.2.ipk  make_package.sh  update_other_repo.sh
bash_completions/: voxl-configure-tflite
config/: voxl-configure-tflite.sh
include/: ai_detection.h  config_file.h  inference_helper.h  input_interface_named_pipe.h  resize.h  tcp_utils.hpp  voxl_tflite_gpu_object_detect.h  voxl_tflite_interface.h
include/common/: common_defs.h  debug_log.h  voxl_tflite_server.h
include/gpu/: voxl_gpu_utils.h
ipk/control/: control  postinst  preinst
modalai/temporary/temp/: libmodal_json_0.3.0_202012090513.ipk  libmodal_pipe_1.6.2_202101301836.ipk
modalai/voxl-cross64/: Dockerfile  aarch64-gnu-4.9.toolchain.cmake  run_docker.sh
pkg/control/: control
scripts/: voxl-configure-tflite
scripts/820/: voxl-configure-tflite
scripts/865/: voxl-configure-tflite
scripts/apq8096/: voxl-configure-tflite
scripts/qrb5165/: voxl-configure-tflite
server/: CMakeLists.txt  ai_detection.h  config_file.h  main.cpp  models.cpp  threads.cpp  threads.h  undistort.c  undistort.h
source/: CMakeLists-32-bit.txt  CMakeLists.txt
source/include/: voxl_tflite_gpu_object_detect.h  voxl_tflite_interface.h
source/include/common/: common_defs.h  voxl_tflite_server.h
source/include/external_interface/: external_interface.h
source/include/external_interface/named_pipe/: voxl_mpa_tflite_server_pipe.h
source/src/: debug_log.cpp  input_interface_named_pipe.cpp  voxl_tflite_gpu_object_detect.cpp  voxl_tflite_interface.cpp  voxl_tflite_main.cpp
source/src/external_interface/: external_interface_named_pipe.cpp
source/src/external_interface/named_pipe/: voxl_mpa_tflite_server_pipe.cpp
source/src/gpu/: voxl_gpu_utils.cpp
src/: CMakeLists.txt  inference_helper.cpp  main.cpp  resize.c  tcp_utils.cpp  voxl_tflite_gpu_object_detect.cpp  voxl_tflite_interface.cpp  voxl_tflite_main.cpp
src/gpu/: voxl_gpu_utils.cpp
